# Image2Code

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
gui/: Image2Code.py  t.py
gui/output/: output.cpp  output.txt
gui/preprocessing/: Image2Code  Image2Code_2  Image2Code_3  Image2Code_4  Image2Code_5  Image2Code_6  Image2Code_7  Image2Code_8  Image2Code_9  imgtxtenh
gui/preprocessing/tmp/Preprocess/: wiener.ppm
gui/src/: CMakeLists.txt  Main.cpp
gui/src/Preprocessing/: Preprocessor.h
gui/src/Preprocessing/AdaptiveWienerFilter/: WienerFilter.h
gui/src/Segmentation/: CharSegmentation.cpp  CharSegmentation.h  LineSegmentation.cpp  LineSegmentation.h  Segmentation.cpp  Segmentation.h  WordSegmentation.cpp  WordSegmentation.h
gui/src/Utilities/: Constants.h  Utilities.cpp  Utilities.h
gui/utilities/: Overlay.py  code_editor.py
gui/utilities/classifier/: classifier.py  network.py
gui/utilities/classifier/models/: small_mapping.npz  small_model.npz  special_mapping.npz  special_model.npz
py/: capital_mapping.txt  classifier.py  dataset_mapping.npz  dataset_mapping.txt  dataset_mapping_no_capital.npz  emnist_loader.py  emnist_loader_capital.py  load_no_capital.py  model.npz  network.py  process_special_chars.py  process_special_chars_new_key.py  run.py
py/models/: model_29.npz  model_29_.npz  model_dialated_sp_chars_3ep_300_100.npz  model_no_capital_dilated_symbols_30ep.npz  model_no_capital_e0.npz
src/CharacterSegmentation/: CharacterSegmentation.cpp  CharacterSegmentation.h
src/LineSegmentation/: LineSegmentation.cpp  LineSegmentation.h
src/LineSegmentation/Components/: Chunk.h  Line.h  Region.cpp  Region.h
src/Utilities/: Constants.h  Utilities.cpp  Utilities.h
src/WordSegmentation/: WordSegmentation.cpp  WordSegmentation.h
